rails version to 6.0.44

--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,16 @@
 
 
 /public/assets
+.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/app/assets/builds/*
-!/app/assets/builds/.keep
-
+/public/packs
+/public/packs-test
 /node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
 
 .idea/
