rails version to 5.2.4

--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
-  "name": "astlibra_simulator",
+  "name": "astlibra-simulator",
   "private": true,
-  "dependencies": {
-    "@rails/ujs": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
-  },
-  "version": "0.1.0"
+  "dependencies": {}
 }
